fix drawer visibility issue

--- a/src/components/Home/KycPending/index.module.css
+++ b/src/components/Home/KycPending/index.module.css
@@ -1,6 +1,6 @@
 .MainContainer {
   /* @apply 3xl:px-[150px] macbook:px-[112px] xl:px-[80px] md:px-[60px] px-4 w-full gap-2 2xl:justify-center 2xl:items-center md:mt-6; */
-  @apply w-full pb-2 overflow-scroll mobile:overflow-hidden 4xl:p-[150px] 3xl:px-[150px] macbook1:px-[80px] macbook:px-28 cxl:px-[80px] md1:px-[60px] custom:px-[60px] mobile:px-4 ms:px-4;
+  @apply w-full pb-2 !overflow-visible mobile:overflow-hidden 4xl:p-[150px] 3xl:px-[150px] macbook1:px-[80px] macbook:px-28 cxl:px-[80px] md1:px-[60px] custom:px-[60px] mobile:px-4 ms:px-4;
 }
 
 .SubMainContainer {
@@ -28,7 +28,8 @@
   @apply text-16 flex gap-[5px] items-center;
 }
 
-.KNumber {}
+.KNumber {
+}
 
 .orderDetails {
   @apply flex items-start gap-4 text-14 leading-[21px] font-normal text-[#5774AC] py-4 px-3;
@@ -66,7 +67,8 @@
   @apply cursor-pointer flex flex-col gap-2 items-center justify-center pb-5;
 }
 
-.IconBoxIcon {}
+.IconBoxIcon {
+}
 
 .Icon {
   @apply ml-0.5 h-4 w-4 text-[#597492];
